src/PETSc/petscdmplex.pxi

# --------------------------------------------------------------------

cdef extern from * nogil:

    int DMPlexCreate(MPI_Comm,PetscDM*)
    int DMPlexCreateCohesiveSubmesh(PetscDM,PetscBool,const char [],PetscInt,PetscDM*)
    int DMPlexCreateFromCellList(MPI_Comm,PetscInt,PetscInt,PetscInt,PetscInt,PetscBool,const int[],PetscInt,const double[],PetscDM*)
    #int DMPlexCreateFromDAG(PetscDM,PetscInt,const PetscInt [],const PetscInt [],const PetscInt [],const PetscInt [],const PetscScalar [])
    int DMPlexGetDimension(PetscDM,PetscInt *)
    int DMPlexSetDimension(PetscDM,PetscInt)
    int DMPlexGetChart(PetscDM,PetscInt *,PetscInt *)
    int DMPlexSetChart(PetscDM,PetscInt,PetscInt)
    int DMPlexGetConeSize(PetscDM,PetscInt,PetscInt *)
    int DMPlexSetConeSize(PetscDM,PetscInt,PetscInt)
    int DMPlexGetCone(PetscDM,PetscInt,const PetscInt *[])
    int DMPlexSetCone(PetscDM,PetscInt,const PetscInt[])
    int DMPlexInsertCone(PetscDM,PetscInt,PetscInt,PetscInt)
    int DMPlexInsertConeOrientation(PetscDM,PetscInt,PetscInt,PetscInt)
    int DMPlexGetConeOrientation(PetscDM,PetscInt,const PetscInt *[])
    int DMPlexSetConeOrientation(PetscDM,PetscInt,const PetscInt[])
    int DMPlexGetSupportSize(PetscDM,PetscInt,PetscInt *)
    int DMPlexSetSupportSize(PetscDM,PetscInt,PetscInt)
    int DMPlexGetSupport(PetscDM,PetscInt,const PetscInt *[])
    int DMPlexSetSupport(PetscDM,PetscInt,const PetscInt[])
    #int DMPlexInsertSupport(PetscDM,PetscInt,PetscInt,PetscInt)
    #int DMPlexGetConeSection(PetscDM,PetscSection *)
    #int DMPlexGetSupportSection(PetscDM,PetscSection *)
    #int DMPlexGetCones(PetscDM,PetscInt *[])
    #int DMPlexGetConeOrientations(PetscDM,PetscInt *[])
    int DMPlexGetMaxSizes(PetscDM,PetscInt *,PetscInt *)
    int DMPlexSymmetrize(PetscDM)
    int DMPlexStratify(PetscDM)
    #int DMPlexEqual(PetscDM,PetscDM,PetscBool*)
    int DMPlexOrient(PetscDM)
    #int DMPlexInterpolate(PetscDM,PetscDM*)
    #int DMPlexUninterpolate(PetscDM,PetscDM*)
    #int DMPlexLoad(PetscViewer,PetscDM)
    #int DMPlexSetPreallocationCenterDimension(PetscDM,PetscInt)
    #int DMPlexGetPreallocationCenterDimension(PetscDM,PetscInt*)
    #int DMPlexPreallocateOperator(PetscDM,PetscInt,PetscSection,PetscSection,PetscInt[],PetscInt[],PetscInt[],PetscInt[],Mat,PetscBool)
    #int DMPlexGetPointLocal(PetscDM,PetscInt,PetscInt*,PetscInt*)
    #int DMPlexPointLocalRef(PetscDM,PetscInt,PetscScalar*,void*)
    #int DMPlexPointLocalRead(PetscDM,PetscInt,const PetscScalar*,const void*)
    #int DMPlexGetPointGlobal(PetscDM,PetscInt,PetscInt*,PetscInt*)
    #int DMPlexPointGlobalRef(PetscDM,PetscInt,PetscScalar*,void*)
    #int DMPlexPointGlobalRead(PetscDM,PetscInt,const PetscScalar*,const void*)

    int DMPlexCreateLabel(PetscDM,const char [])
    int DMPlexGetLabelValue(PetscDM,const char[],PetscInt,PetscInt *)
    int DMPlexSetLabelValue(PetscDM,const char[],PetscInt,PetscInt)
    int DMPlexClearLabelValue(PetscDM,const char[],PetscInt,PetscInt)
    int DMPlexGetLabelSize(PetscDM,const char[],PetscInt *)
    int DMPlexGetLabelIdIS(PetscDM,const char[],PetscIS*)
    int DMPlexGetStratumSize(PetscDM,const char [],PetscInt,PetscInt *)
    int DMPlexGetStratumIS(PetscDM,const char [],PetscInt,PetscIS*)
    int DMPlexClearLabelStratum(PetscDM,const char[],PetscInt)
    #int PetscSectionCreateGlobalSectionLabel(PetscSection,PetscSF,PetscBool,PetscDMLabel,PetscInt,PetscSection *)

    int DMPlexGetNumLabels(PetscDM,PetscInt *)
    int DMPlexGetLabelName(PetscDM,PetscInt,const char **)
    #int DMPlexHasLabel(PetscDM,const char [],PetscBool *)
    #int DMPlexGetLabel(PetscDM,const char *,PetscDMLabel *)
    #int DMPlexAddLabel(PetscDM,PetscDMLabel)
    #int DMPlexRemoveLabel(PetscDM,const char [],PetscDMLabel *)
    int DMPlexGetCellNumbering(PetscDM,PetscIS*)
    int DMPlexGetVertexNumbering(PetscDM,PetscIS*)

    int DMPlexGetDepth(PetscDM,PetscInt *)
    #int DMPlexGetDepthLabel(PetscDM,PetscDMLabel *)
    int DMPlexGetDepthStratum(PetscDM,PetscInt,PetscInt *,PetscInt *)
    int DMPlexGetHeightStratum(PetscDM,PetscInt,PetscInt *,PetscInt *)

    int DMPlexGetMeet(PetscDM,PetscInt,const PetscInt [],PetscInt *,const PetscInt **)
    #int DMPlexGetFullMeet(PetscDM,PetscInt,const PetscInt [],PetscInt *,const PetscInt **)
    int DMPlexRestoreMeet(PetscDM,PetscInt,const PetscInt [],PetscInt *,const PetscInt **)
    int DMPlexGetJoin(PetscDM,PetscInt,const PetscInt [],PetscInt *,const PetscInt **)
    #int DMPlexGetFullJoin(PetscDM,PetscInt,const PetscInt [],PetscInt *,const PetscInt **)
    int DMPlexRestoreJoin(PetscDM,PetscInt,const PetscInt [],PetscInt *,const PetscInt **)
    int DMPlexGetTransitiveClosure(PetscDM,PetscInt,PetscBool,PetscInt *,PetscInt *[])
    int DMPlexRestoreTransitiveClosure(PetscDM,PetscInt,PetscBool,PetscInt *,PetscInt *[])
    int DMPlexVecGetClosure(PetscDM,PetscSection,PetscVec,PetscInt,PetscInt*,PetscScalar*[])
    int DMPlexVecRestoreClosure(PetscDM,PetscSection,PetscVec,PetscInt,PetscInt*,PetscScalar*[])

    #int DMPlexGenerate(PetscDM,const char [],PetscBool ,PetscDM*)
    #int DMPlexCopyCoordinates(PetscDM,PetscDM)
    #int DMPlexCopyLabels(PetscDM,PetscDM)
    #int DMPlexCreateDoublet(MPI_Comm,PetscInt,PetscBool,PetscBool,PetscBool,PetscReal,PetscDM*)
    #int DMPlexCreateCubeBoundary(PetscDM,const PetscReal [],const PetscReal [],const PetscInt [])
    int DMPlexCreateBoxMesh(MPI_Comm,PetscInt,PetscBool,PetscDM*)
    #int DMPlexCreateHexBoxMesh(MPI_Comm,PetscInt,const PetscInt[],PetscDM*)
    #int DMPlexCreateConeSection(PetscDM,PetscSection *)
    #int DMPlexInvertCell(PetscInt,PetscInt,int [])
    #int DMPlexCheckSymmetry(PetscDM)
    #int DMPlexCheckSkeleton(PetscDM,PetscBool,PetscInt)
    #int DMPlexCheckFaces(PetscDM,PetscBool,PetscInt)

    #int DMPlexCreateNeighborCSR(PetscDM,PetscInt,PetscInt *,PetscInt **,PetscInt **)
    #int DMPlexCreatePartition(PetscDM,const char[],PetscInt,PetscBool,PetscSection *,PetscIS*,PetscSection *,PetscIS*)
    #int DMPlexCreatePartitionClosure(PetscDM,PetscSection,PetscIS,PetscSection *,PetscIS*)
    #int DMPlexDistribute(PetscDM,const char[],PetscInt,PetscSF*,PetscDM*)
    #int DMPlexDistributeField(PetscDM,PetscSF,PetscSection,Vec,PetscSection,Vec)
    #int DMPlexDistributeData(PetscDM,PetscSF,PetscSection,MPI_Datatype,void*,PetscSection,void**)

    #int DMPlexGetOrdering(PetscDM,MatOrderingType,PetscIS*)
    #int DMPlexPermute(PetscDM,PetscIS,PetscDM*)

    #int DMPlexCreateSubmesh(PetscDM,PetscDMLabel,PetscInt,PetscDM*)
    #int DMPlexCreateHybridMesh(PetscDM,PetscDMLabel,PetscDMLabel *,PetscDM*)
    #int DMPlexGetSubpointMap(PetscDM,PetscDMLabel*)
    #int DMPlexSetSubpointMap(PetscDM,PetscDMLabel)
    #int DMPlexCreateSubpointIS(PetscDM,PetscIS*)

    #int DMPlexMarkBoundaryFaces(PetscDM,PetscDMLabel)
    #int DMPlexLabelComplete(PetscDM,PetscDMLabel)
    #int DMPlexLabelCohesiveComplete(PetscDM,PetscDMLabel,PetscBool,PetscDM)

    #int DMPlexGetRefinementLimit(PetscDM,PetscReal *)
    #int DMPlexSetRefinementLimit(PetscDM,PetscReal)
    #int DMPlexGetRefinementUniform(PetscDM,PetscBool *)
    #int DMPlexSetRefinementUniform(PetscDM,PetscBool)

    #int DMPlexGetNumFaceVertices(PetscDM,PetscInt,PetscInt,PetscInt *)
    #int DMPlexGetOrientedFace(PetscDM,PetscInt,PetscInt,const PetscInt [],PetscInt,PetscInt [],PetscInt [],PetscInt [],PetscBool *)

    int DMPlexCreateSection(PetscDM,PetscInt,PetscInt,const_PetscInt[],const_PetscInt[],PetscInt,const_PetscInt[],const_PetscIS[],PetscSection*)
